--- a/shop/shop.html
+++ b/shop/shop.html
@@ -8,6 +8,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+<link rel="icon" href="../Chaicycle.png" type="image/png">
+<link rel="shortcut icon" href="../Chaicycle.png" type="image/png">
 <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
