replaced tea seed with tea leaf

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <span class="material-symbols-outlined text-primary text-sm fill-1">star</span>
 <span class="text-xs text-sage ml-2 font-medium">(Pre-order Active)</span>
 </div>
-<h3 class="text-xl font-bold text-forest mb-1">Essential Tea Seed Oil</h3>
+<h3 class="text-xl font-bold text-forest mb-1">Essential Tea Leaf Oil</h3>
 <p class="text-sage text-sm mb-6">Cold-pressed from upcycled seeds for maximum nutrient density.</p>
 <a href="https://api.whatsapp.com/send?phone=919883425303"
    target="_blank"
