replaced tea seed with tea leaf

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <div class="group product-card-hover p-4 rounded-2xl">
 <div class="relative overflow-hidden rounded-xl bg-beige mb-6">
 <span class="absolute top-4 left-4 z-10 bg-primary text-forest text-[10px] font-black uppercase tracking-widest px-3 py-1 rounded">Coming Soon</span>
-<img alt="Essential Tea Seed Oil" class="w-full aspect-square object-cover transition-transform duration-500 group-hover:scale-105" src="https://lh3.googleusercontent.com/aida-public/AB6AXuD2k9jELMkIhlKsBM8VGm3tS2P5B8pRkc3lwf0Jzz4wp3TQ5DV1pbwPjzH8zVEkW9YwKk5-SjuuojspZR73FVbkmXel8-PoDKCWM2eETvWf2Q_LDOCG3wJPIDT8Aa8BhoUKY7-mBRLgK6DJyEvxjxQrOYpTRgOpRoFAKxxsiIxpli56XdYG7aHc51r_Dt6lIml3Tx1ls7TaMBi56s_Tvw9Iwxc62zcmHZBGFnTAlTiqWoVcpi2vqH1qEsFziShbYk5RxY4gZ6CUHNd3"/>
+<img alt="Essential Tea Leaf Oil" class="w-full aspect-square object-cover transition-transform duration-500 group-hover:scale-105" src="https://lh3.googleusercontent.com/aida-public/AB6AXuD2k9jELMkIhlKsBM8VGm3tS2P5B8pRkc3lwf0Jzz4wp3TQ5DV1pbwPjzH8zVEkW9YwKk5-SjuuojspZR73FVbkmXel8-PoDKCWM2eETvWf2Q_LDOCG3wJPIDT8Aa8BhoUKY7-mBRLgK6DJyEvxjxQrOYpTRgOpRoFAKxxsiIxpli56XdYG7aHc51r_Dt6lIml3Tx1ls7TaMBi56s_Tvw9Iwxc62zcmHZBGFnTAlTiqWoVcpi2vqH1qEsFziShbYk5RxY4gZ6CUHNd3"/>
 </div>
 <div class="flex items-center gap-1 mb-2">
 <span class="material-symbols-outlined text-primary text-sm fill-1">star</span>
