--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <span class="text-xs text-sage ml-2 font-medium">(Pre-order Active)</span>
 </div>
 <h3 class="text-xl font-bold text-forest mb-1">Essential Tea Leaf Oil</h3>
-<p class="text-sage text-sm mb-6">Cold-pressed from upcycled seeds for maximum nutrient density.</p>
+<p class="text-sage text-sm mb-6">Cold-pressed from upcycled tea leaves for maximum nutrient density.</p>
 <a href="https://api.whatsapp.com/send?phone=919883425303"
    target="_blank"
    rel="noopener noreferrer"
